manifests/fault-injection.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - nginx-service
  http:
    - fault:
        delay:
          fixedDelay: 10s
          percentage:
            value: 100 # 100% of requests.

        abort:
          httpStatus: 500
          percentage:
            value: 100

      route:
      - destination:
          host: nginx-service
          subset: all
---

apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: nginx-dr
spec:
  host: nginx-service
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpHeaderName: "x-user"
  subsets:
    - name: all
      labels:
        app: nginx # get all pods with nginx.
