manifests/vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-vs
spec:
  hosts:
  - nginx-service
  http:
    - route:
      - destination:
          host: nginx-service
          subset: v1
        weight: 90 # 90% of requests
      - destination:
          host: nginx-service
          subset: v2
        weight: 10 # 10% of requests
